--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 /* Hero Section */
 
 .hero-section {
-    background: url('/img/hero-bg.webp') no-repeat center center/cover;
+    background: url('/img/LSCP1.png') no-repeat center center/cover;
     height: 600px;
     display: flex;
     flex-direction: column;
@@ -29,6 +29,11 @@ body {
 .hero-section .lead {
     font-size: 1.2rem;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+}
+
+.btn-margin {
+    margin-top: 250px;
+    /* Menambahkan jarak vertikal */
 }
 
 .card {
